--- a/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
+++ b/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
@@ -1,3 +1,77 @@
-﻿<h1 ref="questionDetail">
-    Question Detail
-</h1>
+﻿<div class="row d-flex justify-content-center">
+
+
+    <div class="col-md-6">
+        <div class="card">
+            <div class="d-flex justify-content-between align-items-center card-header">
+                <div class="justify-content-start">
+                    <img class="mr-3 circle-rounded" src="/images/avatar/4.jpg" width="50" height="50" alt="Generic placeholder image">
+                    <a class="text-dark fw-bold" href="/users">
+                        <span>Furki</span>
+                    </a>
+                </div>
+                <div class="justify-content-end align-items-center">
+                    <small class="text-muted ml-3"> 2 hours ago</small>
+                </div>
+
+
+            </div>
+
+            <div class="card-body">
+                <div class="d-sm-flex justify-content-between mb-2">
+                    <div>
+                        <h5 class="mb-sm-0"> Gunluk Toplantı Notlar</h5>
+                    </div>
+
+                </div>
+                <div class="pb-5">
+                    <h7>
+                        Arkadaşlar bu gün ömyle bir şey oldu ki toplandıda patronm götümü elledi ben bunu nereye şikayet edebilirim.
+                       
+                    </h7>
+                </div>
+
+                <div class="media media-reply ">
+                    <img class="mr-3 circle-rounded" src="/images/avatar/1.jpg" width="50" height="50" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <h5 class="mb-sm-0">Habililo <small class="text-muted ml-3">10 min ago</small></h5>
+                            <div class="media-reply__link d-flex justify-content-around">
+                                <div class="d-flex justify-content-center align-items-center mr-3">
+                                    <span>3</span>
+                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="like(index)"><i class="fa fa-thumbs-up"></i></button>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mr-3">
+                                    <span>50</span>
+                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="disLike(index)"><i class="fa fa-thumbs-down"></i></button>
+                                </div>
+                                <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
+                            </div>
+                        </div>
+                        <h7>Sen de onu elle</h7>
+                    </div>
+                </div>
+                <div class="media media-reply pb-2">
+                    <img class="mr-3 circle-rounded" src="/images/avatar/1.jpg" width="50" height="50" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <h5 class="mb-sm-0">Habililo <small class="text-muted ml-3">10 min ago</small></h5>
+                            <div class="media-reply__link d-flex justify-content-around">
+                                <div class="d-flex justify-content-center align-items-center mr-3">
+                                    <span>3</span>
+                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="like(index)"><i class="fa fa-thumbs-up"></i></button>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mr-3">
+                                    <span>50</span>
+                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="disLike(index)"><i class="fa fa-thumbs-down"></i></button>
+                                </div>
+                                <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
+                            </div>
+                        </div>
+                        <h7>Sen de onu elle</h7>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
