fake data eklendi ve controllera baglandi question detail

--- a/EtuStackOverflow/Views/Home/Profile.cshtml
+++ b/EtuStackOverflow/Views/Home/Profile.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Profile";
 }
 
-<div class="row" id="profileList" ref="profileList">
+<div class="row" ref="profileList">
     <div class="col-md-3">
         <div class="card">
             <div class="card-body">
