--- a/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
+++ b/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
@@ -1,36 +1,29 @@
-﻿<div class="row d-flex justify-content-center">
-
-
+﻿<div class="row d-flex justify-content-center" ref="questionDetail">
     <div class="col-md-6">
         <div class="card">
             <div class="d-flex justify-content-between align-items-center card-header">
                 <div class="justify-content-start">
-                    <img class="mr-3 circle-rounded" src="/images/avatar/4.jpg" width="50" height="50" alt="Generic placeholder image">
+                    <img class="mr-3 circle-rounded" v-bind:src="'/images/founderavatar/' + question.pp" width="50" height="50" alt="Generic placeholder image">
                     <a class="text-dark fw-bold" href="/users">
-                        <span>Furki</span>
+                        <span>{{question.username}}</span>
                     </a>
                 </div>
                 <div class="justify-content-end align-items-center">
                     <small class="text-muted ml-3"> 2 hours ago</small>
                 </div>
-
-
             </div>
-
             <div class="card-body">
                 <div class="d-sm-flex justify-content-between mb-2">
                     <div>
-                        <h5 class="mb-sm-0"> Gunluk Toplantı Notlar</h5>
+                        <h5 class="mb-sm-0"> {{question.title}}</h5>
                     </div>
 
                 </div>
                 <div class="pb-5">
                     <h7>
-                        Arkadaşlar bu gün ömyle bir şey oldu ki toplandıda patronm götümü elledi ben bunu nereye şikayet edebilirim.
-                       
+                       {{question.content}}
                     </h7>
                 </div>
-
                 <div class="media media-reply ">
                     <img class="mr-3 circle-rounded" src="/images/avatar/1.jpg" width="50" height="50" alt="Generic placeholder image">
                     <div class="media-body">
