--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="row" id="userPageList" ref="userPageList">
+﻿<div class="row" ref="userPageList">
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-2">
