--- a/EtuStackOverflow/Views/Auth/Register.cshtml
+++ b/EtuStackOverflow/Views/Auth/Register.cshtml
@@ -12,13 +12,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>@ViewData["Title"] - EtuStackOverflow</title>
     <!-- Favicon icon -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     <link href="~/css/style.css" rel="stylesheet">
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body class="h-100">
-
     <!--*******************
         Preloader start
     ********************-->
@@ -33,54 +38,94 @@
         Preloader end
     ********************-->
 
-
-
-
-
     <div class="login-form-bg h-100">
         <div class="container h-100">
             <div class="row justify-content-center h-100">
                 <div class="col-xl-6">
                     <div class="form-input-content">
                         <div class="card login-form mb-0">
-                            <div class="card-body pt-5">
+                            <div class="card-body pt-5" id="registerPage">
 
                                 <h4 class="text-center">Register</h4>
-
-                                <form class="mt-5 mb-5 login-input">
+                                <form class="mt-3 mb-5 login-input" v-on:submit.prevent="registerNow()">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Name" required>
+                                        <div v-if="isError" class="alert alert-danger" role="alert">
+                                            {{errorMessage}}
+                                        </div>
+                                        <div v-if="isSuccess" class="alert alert-success" role="alert">
+                                            Hesabınız başarıyla oluşturuldu. Lütfen e-posta adresinizi doğrulamak için size gönderilen bağlantıyı kullanın.
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="User Name" required>
+                                        <input type="text" v-model="register.name" class="form-control" placeholder="Name" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Date of birth" required>
+                                        <input type="text" v-model="register.surName" class="form-control" placeholder="Sur Name" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email" required>
+                                        <input type="text" v-model="register.userName" class="form-control" placeholder="User Name" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" placeholder="Password" required>
+                                        <input type="email" v-model="register.email" class="form-control" placeholder="Email" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" placeholder="Password" required>
+                                        <input type="password" v-model="register.password" class="form-control" placeholder="Password" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Faculty" required>
+                                        <input type="password" v-model="register.passwordAgain" class="form-control" placeholder="Password Confirm" required>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Department" required>
+                                    <div class="form-group" ref="facultyAreaRef">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <select class='form-control' name='faculty' v-model="register.facultyId" v-on:change="getAllMajors(register.facultyId)">
+                                                    <option value='0' selected>
+                                                        Lütfen Fakulte seçiniz
+                                                    </option>
+                                                    <option v-for="faculty in faculties" :key="faculty.id" :value="faculty.id">
+                                                        {{ faculty.name }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-5">
+                                                <select class='form-control' name='major' v-model="register.majorId">
+                                                    <option value='0' selected>
+                                                        Lütfen Bolum seçiniz
+                                                    </option>
+                                                    <option v-for="major in majors" :key="major.id" :value="major.id">
+                                                        {{ major.name }}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <select class='form-control' name='grade' v-model="register.grade">
+                                                    <option value="0" selected>
+                                                        Hazirlik
+                                                    </option>
+                                                    <option value="1">
+                                                        1
+                                                    </option>
+                                                    <option value="2">
+                                                        2
+                                                    </option>
+                                                    <option value="3">
+                                                        3
+                                                    </option>
+                                                    <option value="4">
+                                                        4
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Class" required>
-                                    </div>
-                                    
-                                    
-                                    <button class="btn login-form__btn submit w-100">Register</button>
+                                    <button class="btn btn-primary login-form__btn submit w-100">
+                                        <span v-if="!isLoading" class="indicator-label">Kayit ol</span>
+                                        <span v-if="isLoading" class="indicator-progress" style="display: block;">
+                                            Lütfen bekleyin...
+                                            <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                                        </span>
+                                    </button>
                                 </form>
                                 <p class="mt-5 login-form__footer">Have account <a href="/Auth/Login" class="text-primary">Login </a> now</p>
-                                </p>
                             </div>
                         </div>
                     </div>
@@ -88,7 +133,7 @@
             </div>
         </div>
     </div>
-    </div>
+
     <!--**********************************
         Scripts
     ***********************************-->
@@ -97,6 +142,7 @@
     <script src="~/js/settings.js"></script>
     <script src="~/js/gleek.js"></script>
     <script src="~/js/styleSwitcher.js"></script>
+    <script src="~/js/auth/register.js"></script>
 </body>
 </html>
 
