login register token done

--- a/EtuStackOverflow/Views/Email/Success.cshtml
+++ b/EtuStackOverflow/Views/Email/Success.cshtml
@@ -46,6 +46,11 @@
                         <h5 class="card-title text-dark">
                             E-posta Adresi Başarıyla Doğrulandı!
                         </h5>
+                        <div class="mt-5">
+                            <a class="btn btn-outline-info" href="/auth/login">
+                                Girise Yap
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
