--- a/EtuStackOverflow/Views/Auth/Login.cshtml
+++ b/EtuStackOverflow/Views/Auth/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = null;
-    ViewData["Title"] = "Login Page";
+    ViewData["Title"] = "Login";
 }
 
 <!DOCTYPE html>
@@ -11,8 +11,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>@ViewData["Title"] - EtuStackOverflow</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     <link href="~/css/style.css" rel="stylesheet">
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body class="h-100">
@@ -31,32 +37,38 @@
         Preloader end
     ********************-->
 
-
-
-
-
     <div class="login-form-bg h-100">
         <div class="container h-100">
             <div class="row justify-content-center h-100">
                 <div class="col-xl-6">
                     <div class="form-input-content">
                         <div class="card login-form mb-0">
-                            <div class="card-body pt-5">
+                            <div class="card-body pt-5" id="loginPage" ref="loginPageAccess">
                                 <h4 class="text-center">Login</h4>
-
-                                <form class="mt-5 mb-5 login-input">
+                                <form class="mt-5 mb-5 login-input" v-on:submit.prevent="loginNow()">
                                     <div class="form-group">
-                                        <input required type="email" class="form-control" placeholder="Email">
+                                        <div v-if="isError" class="alert alert-danger" role="alert">
+                                            {{errorMessage}}
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input required type="password" class="form-control" placeholder="Password">
+                                        <input required type="text" v-model="login.userNameOrEmail" class="form-control" placeholder="Kullanici Adi / E-posta">
                                     </div>
                                     <div class="form-group">
-                                        <a href="/Auth/ForgetPassword" style="font-size:12px"> Forgot Password?</a>
+                                        <input required type="password" v-model="login.password" class="form-control" placeholder="Password">
                                     </div>
-                                    <button class="btn login-form__btn submit w-100">Login</button>
+                                    <div class="form-group">
+                                        <a href="/Auth/ForgetPassword" style="font-size:12px"> Sifreni mi unuttun?</a>
+                                    </div>
+                                    <button class="btn btn-primary login-form__btn submit w-100">
+                                        <span v-if="!isLoading" class="indicator-label">Giriş Yap</span>
+                                        <span v-if="isLoading" class="indicator-progress" style="display: block;">
+                                            Lütfen bekleyin...
+                                            <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                                        </span>
+                                    </button>
                                 </form>
-                                <p class="mt-5 login-form__footer">Dont have account? <a href="/Auth/Register" class="text-primary">Register</a> now</p>
+                                <p class="mt-5 login-form__footer">Hesabin yok mu? Simdi <a href="/Auth/Register" class="text-primary">Kayit Ol</a></p>
                             </div>
                         </div>
                     </div>
@@ -74,6 +86,8 @@
     <script src="~/js/settings.js"></script>
     <script src="~/js/gleek.js"></script>
     <script src="~/js/styleSwitcher.js"></script>
+    <script type="module" src="~/js/auth/login.js"></script>
+    <script type="module" src="~/js/cookieManager.js"></script>
 </body>
 </html>
 
