--- a/EtuStackOverflow/Views/Auth/Register.cshtml
+++ b/EtuStackOverflow/Views/Auth/Register.cshtml
@@ -44,7 +44,7 @@
                 <div class="col-xl-6">
                     <div class="form-input-content">
                         <div class="card login-form mb-0">
-                            <div class="card-body pt-5" id="registerPage">
+                            <div class="card-body pt-5" id="registerPage" ref="registerPage">
 
                                 <h4 class="text-center">Register</h4>
                                 <form class="mt-3 mb-5 login-input" v-on:submit.prevent="registerNow()">
@@ -142,7 +142,8 @@
     <script src="~/js/settings.js"></script>
     <script src="~/js/gleek.js"></script>
     <script src="~/js/styleSwitcher.js"></script>
-    <script src="~/js/auth/register.js"></script>
+    <script type="module" src="~/js/auth/register.js"></script>
+    <script type="module" src="~/js/cookieManager.js"></script>
 </body>
 </html>
 
