--- a/EtuStackOverflow/Views/Home/Index.cshtml
+++ b/EtuStackOverflow/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Home";
+}
+
 <div class="row justify-content-center">
     <div class="col-3">
         <div class="card card-widget">
