--- a/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
+++ b/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="row d-flex justify-content-center" ref="questionDetail">
+﻿@{
+    ViewData["Title"] = "Question Detail";
+}
+
+<div class="row d-flex justify-content-center" ref="questionDetail">
     <div class="col-md-6">
         <div class="card">
             <div class="d-flex justify-content-between align-items-center card-header">
