--- a/EtuStackOverflow/Views/Home/Questions.cshtml
+++ b/EtuStackOverflow/Views/Home/Questions.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="row d-flex justify-content-center" ref="questionPage">
+﻿@{
+    ViewData["Title"] = "Questions";
+}
+
+<div class="row d-flex justify-content-center" ref="questionPage">
     <div class="col-md-6">
         <div class="card">
             <div class="card-header">
