--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="row" ref="userPageList">
+﻿@{
+    ViewData["Title"] = "Users";
+}
+
+
+<div class="row" ref="userPageList">
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-2">
