--- a/EtuStackOverflow/Views/Auth/ForgetPassword.cshtml
+++ b/EtuStackOverflow/Views/Auth/ForgetPassword.cshtml
@@ -1,4 +1,124 @@
-﻿<div class="text-center">
-    <h1 class="display-4">ForgetPassword</h1>
-</div>
+﻿@{
+    ViewData["Title"] = "Forget Password";
+    Layout = null;
+}
 
+<!DOCTYPE html>
+<html class="h-100" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>@ViewData["Title"] - EtuStackOverflow</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+    <link href="~/css/style.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+</head>
+
+<body class="h-100">
+
+    <!--*******************
+        Preloader start
+    ********************-->
+    <div id="preloader">
+        <div class="loader">
+            <svg class="circular" viewBox="25 25 50 50">
+                <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="3" stroke-miterlimit="10" />
+            </svg>
+        </div>
+    </div>
+    <!--*******************
+        Preloader end
+    ********************-->
+
+    <div class="login-form-bg h-100">
+        <div class="container h-100">
+            <div class="row justify-content-center h-100">
+                <div class="col-xl-6">
+                    <div class="form-input-content">
+                        <div class="card login-form mb-0">
+                            <div class="card-body pt-5" id="forgetPasswordPage" ref="forgetPasswordPage">
+                                <h4 class="text-center">Sifre Sifirlama</h4>
+                                <form v-if="inSendVerifyCode" class="mt-5 mb-5 login-input" v-on:submit.prevent="sendVerifyCode()">
+                                    <div class="form-group">
+                                        <div v-if="isError" class="alert alert-danger" role="alert">
+                                            {{errorMessage}}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <input required type="text" v-model="resetPasswordRequest.userNameOrEmail" class="form-control" placeholder="Kullanici Adi / E-posta">
+                                    </div>
+                                    <button class="btn btn-primary login-form__btn submit w-100">
+                                        <span v-if="!isLoading" class="indicator-label">Gonder</span>
+                                        <span v-if="isLoading" class="indicator-progress" style="display: block;">
+                                            Lütfen bekleyin...
+                                            <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                                        </span>
+                                    </button>
+                                </form>
+                                <form v-if="inEnterVerifyCode" class="mt-5 mb-5 login-input" v-on:submit.prevent="enterVerifyCode()">
+                                    <div class="form-group">
+                                        <div v-if="isError" class="alert alert-danger" role="alert">
+                                            {{errorMessage}}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <input required maxlength="6" type="number" v-model="enterVerifyCodeRequest.verifyCode" class="form-control" placeholder="Dogrulama Kodu">
+                                    </div>
+                                    <button class="btn btn-primary login-form__btn submit w-100">
+                                        <span v-if="!isLoading" class="indicator-label">Gonder</span>
+                                        <span v-if="isLoading" class="indicator-progress" style="display: block;">
+                                            Lütfen bekleyin...
+                                            <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                                        </span>
+                                    </button>
+                                </form>
+                                <form v-if="inChangePassword" class="mt-5 mb-5 login-input" v-on:submit.prevent="changePassword()">
+                                    <div class="form-group">
+                                        <div v-if="isError" class="alert alert-danger" role="alert">
+                                            {{errorMessage}}
+                                        </div>
+                                        <div v-if="isSuccess" class="alert alert-success" role="alert">
+                                            Sifreniz basarili bir sekilde degistirildi.
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <input required type="password" v-model="changePasswordRequest.newPassword" class="form-control" placeholder="Yeni Sifre">
+                                    </div>
+                                    <div class="form-group">
+                                        <input required type="password" v-model="changePasswordRequest.newPasswordConfirm" class="form-control" placeholder="Yeni Sifre Tekrar">
+                                    </div>
+                                    <button class="btn btn-primary login-form__btn submit w-100">
+                                        <span v-if="!isLoading" class="indicator-label">Kaydet</span>
+                                        <span v-if="isLoading" class="indicator-progress" style="display: block;">
+                                            Lütfen bekleyin...
+                                            <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                                        </span>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--**********************************
+        Scripts
+    ***********************************-->
+    <script src="~/plugins/common/common.min.js"></script>
+    <script src="~/js/custom.min.js"></script>
+    <script src="~/js/settings.js"></script>
+    <script src="~/js/gleek.js"></script>
+    <script src="~/js/styleSwitcher.js"></script>
+    <script  src="~/js/auth/forget_password.js"></script>
+</body>
+</html>
