user profile bitti

--- a/EtuStackOverflow/Views/Auth/ForgetPassword.cshtml
+++ b/EtuStackOverflow/Views/Auth/ForgetPassword.cshtml
@@ -55,7 +55,7 @@
                                         <input required type="text" v-model="resetPasswordRequest.userNameOrEmail" class="form-control" placeholder="Kullanici Adi / E-posta">
                                     </div>
                                     <button class="btn btn-primary login-form__btn submit w-100">
-                                        <span v-if="!isLoading" class="indicator-label">Gonder</span>
+                                        <span v-if="!isLoading" class="indicator-label">Ara</span>
                                         <span v-if="isLoading" class="indicator-progress" style="display: block;">
                                             Lütfen bekleyin...
                                             <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
@@ -69,10 +69,10 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <input required maxlength="6" type="number" v-model="enterVerifyCodeRequest.verifyCode" class="form-control" placeholder="Dogrulama Kodu">
+                                        <input required min="100000" max="999999" type="number" v-model="enterVerifyCodeRequest.verifyCode" class="form-control fs-3 text-center" placeholder="Dogrulama Kodu">
                                     </div>
-                                    <button class="btn btn-primary login-form__btn submit w-100">
-                                        <span v-if="!isLoading" class="indicator-label">Gonder</span>
+                                    <button class="btn btn-info p-3 submit w-100 fw-bold fs-6">
+                                        <span v-if="!isLoading" class="indicator-label">Doğrula</span>
                                         <span v-if="isLoading" class="indicator-progress" style="display: block;">
                                             Lütfen bekleyin...
                                             <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
@@ -89,12 +89,12 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <input required type="password" v-model="changePasswordRequest.newPassword" class="form-control" placeholder="Yeni Sifre">
+                                        <input required type="password" v-on:change="passWordMatchControl()" v-model="changePasswordRequest.newPassword" class="form-control" placeholder="Yeni Sifre">
                                     </div>
                                     <div class="form-group">
-                                        <input required type="password" v-model="changePasswordRequest.newPasswordConfirm" class="form-control" placeholder="Yeni Sifre Tekrar">
+                                        <input required v-on:keyup="passWordMatchControl()" id="confirm_new_password" type="password" v-model="changePasswordRequest.newPasswordConfirm" class="form-control" placeholder="Yeni Sifre Tekrar">
                                     </div>
-                                    <button class="btn btn-primary login-form__btn submit w-100">
+                                    <button class="btn btn-success p-3 submit w-100 fw-bold fs-6">
                                         <span v-if="!isLoading" class="indicator-label">Kaydet</span>
                                         <span v-if="isLoading" class="indicator-progress" style="display: block;">
                                             Lütfen bekleyin...
@@ -109,7 +109,6 @@
             </div>
         </div>
     </div>
-
 
     <!--**********************************
         Scripts
