--- a/EtuStackOverflow/Views/Auth/Register.cshtml
+++ b/EtuStackOverflow/Views/Auth/Register.cshtml
@@ -57,22 +57,22 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" v-model="register.name" class="form-control" placeholder="Name" required>
+                                        <input type="text" v-model="register.name" class="form-control" placeholder="Ad" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" v-model="register.surName" class="form-control" placeholder="Sur Name" required>
+                                        <input type="text" v-model="register.surName" class="form-control" placeholder="Soyad" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" v-model="register.userName" class="form-control" placeholder="User Name" required>
+                                        <input type="text" v-model="register.userName" class="form-control" placeholder="Kullanici Adi" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" v-model="register.email" class="form-control" placeholder="Email" required>
+                                        <input type="email" v-model="register.email" class="form-control" placeholder="E-posta" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" v-model="register.password" class="form-control" placeholder="Password" required>
+                                        <input type="password" v-on:change="passWordMatchControl()" v-model="register.password" class="form-control" placeholder="Sifre" required>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" v-model="register.passwordAgain" class="form-control" placeholder="Password Confirm" required>
+                                        <input type="password" v-on:keyup="passWordMatchControl()" id="confirm_password" v-model="register.passwordAgain" class="form-control" placeholder="Sifre Tekrar" required>
                                     </div>
                                     <div class="form-group" ref="facultyAreaRef">
                                         <div class="row">
