--- a/EtuStackOverflow/Views/Home/Profile.cshtml
+++ b/EtuStackOverflow/Views/Home/Profile.cshtml
@@ -3,40 +3,146 @@
 }
 
 <div class="row" ref="profileList">
+    <div class="modal fade" id="editProfileModal">
+        <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Profil Duzenleme</h3>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="mb-2" v-on:submit.prevent="updateProfile()">
+                        <div class="row">
+                            <div class="col-md-12 form-group">
+                                <div v-if="isError" class="alert alert-danger">
+                                    {{errorMessage}}
+                                </div>
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <div class="d-flex justify-content-center">
+                                    <input v-on:change="uploadProfilePhoto($event)" type="file" id="fileInput" accept="image/png" style="display: none">
+                                    <label for="fileInput">
+                                        <div class="position-absolute top-25 start-25">
+                                            <i class='far fa-edit'></i>
+                                        </div>
+                                        <img v-if="userProfileDetailEdit.id!==0&&userProfileDetailEdit.profilePhoto!==''" class="rounded-circle" v-bind:src="getProfilePhoto(userProfileDetailEdit.profilePhoto)" width="120" height="120" alt="">
+                                        <span v-if="!(userProfileDetailEdit.id!==0&&userProfileDetailEdit.profilePhoto.length !== 0)"
+                                              class="bg-light text-danger rounded-circle fs-1 fw-bold d-flex justify-content-center align-items-center" style="width: 120px;height: 120px;">
+                                            {{userProfileDetail.fullName.charAt(0)}}
+                                        </span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-md-7 form-group">
+                                <label for="name" class="text-dark fw-bold">Isim</label>
+                                <input type="text"
+                                       required
+                                       name="name"
+                                       v-model="userProfileDetailEdit.name"
+                                       class="form-control rounded">
+                            </div>
+                            <div class="col-md-5 form-group">
+                                <label for="surName" class="text-dark fw-bold">Soyisim</label>
+                                <input type="text"
+                                       required
+                                       name="surName"
+                                       v-model="userProfileDetailEdit.surName"
+                                       class="form-control rounded">
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <label for="username" class="text-dark fw-bold">Kullanici Adi</label>
+                                <input type="text"
+                                       required
+                                       name="username"
+                                       v-model="userProfileDetailEdit.userName"
+                                       class="form-control rounded">
+                            </div>
+
+                            <div class="col-md-12 form-group">
+                                <label for="dateofbirth" class="text-dark fw-bold">Dogum Tarihi</label>
+                                <input type="date"
+                                       name="dateofbirth"
+                                       v-model="userProfileDetailEdit.dateOfBirth"
+                                       class="form-control rounded">
+                            </div>
+                            <div class="col-md-12">
+                                <div class="row d-flex justify-content-center">
+                                    <div class="col-md-4 d-flex justify-content-center">
+                                        <button class="btn btn-info p-2 submit fw-bold fs-6">
+                                            <span v-if="!isLoading">Guncelle</span>
+                                            <span v-if="isLoading" class="d-flex justify-content-center align-items-center">
+                                                Guncelleniyor...
+                                                <div class="custom-spinner"></div>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="col-md-3">
         <div class="card">
             <div class="card-body">
-                <div class="row mb-5">
+                <div class="row mb-5 d-flex justify-content-center">
                     <div class="col-md-12">
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-info text-white" data-toggle="modal" data-target="#editProfileModal">
+                                <i class='far fa-edit'></i>
+                            </button>
+                        </div>
                         <div class="d-flex justify-content-center mb-4 mt-1">
-                            <img src="~/images/avatar/11.png" width="160" height="160" alt="">
+                            <img v-if="userProfileDetail.id!==0&&userProfileDetail.profilePhoto.length > 0" class="rounded-circle" v-bind:src="getProfilePhoto(userProfileDetail.profilePhoto)" width="160" height="160" alt="">
+                            <span v-if="!(userProfileDetail.id!==0&&userProfileDetail.profilePhoto.length !== 0)"
+                                  class="bg-light text-danger rounded-circle fs-1 fw-bold d-flex justify-content-center align-items-center" style="width: 160px;height: 160px;">
+                                {{userProfileDetail.fullName.charAt(0)}}
+                            </span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="d-flex justify-content-center align-items-center mb-4">
                             <div class="">
-                                <h3 class="mb-0">Burakhan Wolf</h3>
-                                <p class="text-muted mb-0">burakhanwolf</p>
+                                <h3 class="mb-0">{{userProfileDetail.fullName}}</h3>
+                                <p class="text-muted text-center mb-0">{{userProfileDetail.userName}}</p>
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-12">
+                        <div class="d-flex justify-content-center align-items-center mb-4">
+                            <div class="rounded rounded-2 bg-info-lighten-2">
+                                <span class="p-1 fs-6 fw-500">{{userProfileDetail.email}}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6" v-if="userProfileDetail.id!==0&&userProfileDetail.dateOfBirth!==null">
+                        <div class="d-flex justify-content-center align-items-center mb-4">
+                            <div class="rounded rounded-2 p-1 alert-warning">
+                                <span class="mb-0 ">{{getFormatedDate(userProfileDetail.dateOfBirth)}}</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="row mb-5">
+                <div class="row">
                     <div class="col">
                         <div class="card card-profile text-center">
                             <span class="mb-1 text-primary"></i></span>
-                            <h3 class="mb-0">263</h3>
-                            <p class="text-muted px-4">Your comments</p>
+                            <h3 class="mb-0">{{userProfileDetail.commentCount}}</h3>
+                            <p class="text-muted px-4">Yorumlarim</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card card-profile text-center">
                             <span class="mb-1 text-warning"></i></span>
-                            <h3 class="mb-0">263</h3>
-                            <p class="text-muted">Interactions</p>
+                            <h3 class="mb-0">{{userProfileDetail.interactionCount}}</h3>
+                            <p class="text-muted">Etkilesimlerim</p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -49,19 +155,19 @@
                 </h3>
             </div>
             <div class="card-body">
-                <div class="media media-reply pb-2" v-for="(question) in profileQuestionData" :key="question.id">
+                <div class="media media-reply pb-2" @* v-for="(question) in profileQuestionData" :key="question.id" *@>
                     <div class="media-body">
                         <div class="d-sm-flex justify-content-between mb-2">
                             <div>
-                                <h5 class="mb-sm-0"> {{question.title}}</h5>
+                                <h5 class="mb-sm-0"> Bilgisayar bozuldu</h5>
                             </div>
                             <div>
-                                <small class="text-muted ml-3"> {{ timeSince(question.createdDate) }}</small>
+                                <small class="text-muted ml-3"> 2 saat once</small>
                             </div>
                         </div>
-                        <h7>
-                            {{question.description}}
-                        </h7>
+                        <p>
+                            Bilgisayar uctu gitti
+                        </p>
                     </div>
                 </div>
             </div>
@@ -75,24 +181,24 @@
                 </h3>
             </div>
             <div class="card-body">
-                <div class="media media-reply pb-2" v-for="(comment, index) in profileInteractionData" :key="index">
-                    <img class="mr-3 circle-rounded" v-bind:src="'/images/avatar/' + comment.profilePicture + '.jpg'" width="50" height="50" alt="Generic placeholder image">
+                <div class="media media-reply pb-2" @* v-for="(comment, index) in profileInteractionData" :key="index" *@>
+                    <img class="mr-3 circle-rounded" @* v-bind:src="'/images/avatar/' + comment.profilePicture + '.jpg'" *@ width="50" height="50" alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="d-sm-flex justify-content-between mb-2">
-                            <h5 class="mb-sm-0">{{comment.name}} <small class="text-muted ml-3">{{timeSince(comment.createdDate)}}</small></h5>
+                            <h5 class="mb-sm-0">Ibrahim <small class="text-muted ml-3">2 dk once</small></h5>
                             <div class="media-reply__link d-flex justify-content-around">
                                 <div class="d-flex justify-content-center align-items-center mr-3">
-                                    <span>{{comment.likeCount}}</span>
-                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="like(index)"><i class="fa fa-thumbs-up"></i></button>
+                                    <span>2</span>
+                                    <button class="btn btn-transparent p-0 ml-1" @* v-on:click="like(index)" *@><i class="fa fa-thumbs-up"></i></button>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mr-3">
-                                    <span>{{comment.disLikeCount}}</span>
-                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="disLike(index)"><i class="fa fa-thumbs-down"></i></button>
+                                    <span>3</span>
+                                    <button class="btn btn-transparent p-0 ml-1" @* v-on:click="disLike(index)" *@><i class="fa fa-thumbs-down"></i></button>
                                 </div>
                                 <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
                             </div>
                         </div>
-                        <h7>{{comment.content}}</h7>
+                        <p>O oyle olmaz kardesim gel bak</p>
                     </div>
                 </div>
             </div>
