--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <title>@ViewData["Title"] - EtuStackOverflow</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/EtuStackOverflow.styles.css" asp-append-version="true" />
-
+    <link href="~/css/spinner.css" rel="stylesheet" />
     <!--Site iconu-->
     <link rel="icon" type="image/png" sizes="16x16" href="~/images/logo.jpg">
 
@@ -17,10 +17,11 @@
     <!-- Chartist -->
     <link rel="stylesheet" href="~/plugins/chartist/css/chartist.min.css">
     <link rel="stylesheet" href="~/plugins/chartist-plugin-tooltips/css/chartist-plugin-tooltip.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment/moment.min.js"></script>
-
 </head>
 <body>
     <img src="~/images/bg/bg-logo.png" class="position-absolute top-50 start-50 translate-middle">
@@ -30,6 +31,7 @@
                 <div class="container-fluid">
                     <a href="/Home">
                         <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
+                        
                     </a>
                     <span class="navbar-brand fw-bold">EtuStackOverflow</span>
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center align-items-center">
@@ -73,7 +75,12 @@
                         <div v-if="isLogin" class="icons dropdown">
                             <div class="user-img c-pointer position-relative" data-toggle="dropdown">
                                 <span class="activity active"></span>
-                                <img src="~/images/avatar/11.png" height="40" width="40" alt="">
+                                <img class="rounded-circle" v-if="userProfileDetail.id!==0&&userProfileDetail.profilePhoto.length > 0" v-bind:src="getProfilePhoto(userProfileDetail.profilePhoto)" height="40" width="40" alt="">
+
+                                <span v-if="!(userProfileDetail.id!==0&&userProfileDetail.profilePhoto.length !== 0)"
+                                      class="bg-light text-danger rounded-circle fs-5 fw-bold d-flex justify-content-center align-items-center" style="width: 40px;height: 40px;">
+                                    {{userProfileDetail.fullName.charAt(0)}}
+                                </span>
                             </div>
                             <div class="drop-down dropdown-profile dropdown-menu">
                                 <div class="dropdown-content-body">
@@ -121,6 +128,7 @@
     <script src="~/js/styleSwitcher.js"></script>
     <script type="module" src="~/js/script.js"></script>
     <script type="module" src="~/js/cookieManager.js"></script>
+    <script type="module" src="~/js/data/user.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
