questionlist and pagination added

--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -129,6 +129,7 @@
     <script type="module" src="~/js/script.js"></script>
     <script type="module" src="~/js/cookieManager.js"></script>
     <script type="module" src="~/js/data/user.js"></script>
+    <script type="module" src="~/js/data/question.js"></script> 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
