--- a/EtuStackOverflow/wwwroot/css/spinner.css
+++ b/EtuStackOverflow/wwwroot/css/spinner.css
@@ -9,6 +9,16 @@
     animation: spin 0.5s linear infinite;
 }
 
+.custom-question-spinner {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 8px solid rgba(0, 0, 0, 0);
+    border-top-color: #a0a0a0;
+    border-bottom-color: #a0a0a0;
+    animation: spin 1s linear infinite;
+}
+
 @keyframes spin {
     to {
         transform: rotate(360deg);
