question detail done

--- a/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
+++ b/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
@@ -4,16 +4,20 @@
 
 <div class="row d-flex justify-content-center" ref="questionDetail">
     <div class="col-md-6">
-        <div class="card">
-            <div class="d-flex justify-content-between align-items-center card-header">
+        <div class="card" v-if="(question.id > 0)&&!isLoading">
+            <div  class="d-flex justify-content-between align-items-center card-header">
                 <div class="justify-content-start">
-                    <img class="mr-3 circle-rounded" v-bind:src="'/images/founderavatar/' + question.pp" width="50" height="50" alt="Generic placeholder image">
+                    <img v-if="question.profilePhoto.length !== 0" v-bind:src="getProfilePhoto(question.profilePhoto)" class="rounded-circle" width="50" height="50">
+                    <span v-if="question.profilePhoto.length === 0"
+                          class="bg-light text-danger rounded-circle fs-5 fw-bold d-flex justify-content-center align-items-center" style="width: 50px;height: 50px;">
+                        {{question.userName.toUpperCase().charAt(0)}}
+                    </span>
                     <a class="text-dark fw-bold" href="/users">
-                        <span>{{question.username}}</span>
+                        <span>{{question.userName}}</span>
                     </a>
                 </div>
                 <div class="justify-content-end align-items-center">
-                    <small class="text-muted ml-3"> 2 hours ago</small>
+                    <small class="text-muted ml-3">{{timeSince(question.createdDate)}}</small>
                 </div>
             </div>
             <div class="card-body">
@@ -25,10 +29,10 @@
                 </div>
                 <div class="pb-5">
                     <h7>
-                       {{question.content}}
+                        {{question.content}}
                     </h7>
                 </div>
-                <div class="media media-reply ">
+                <div class="media media-reply " v-for="comment in question.comments">
                     <img class="mr-3 circle-rounded" src="/images/avatar/1.jpg" width="50" height="50" alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="d-sm-flex justify-content-between mb-2">
@@ -45,28 +49,25 @@
                                 <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
                             </div>
                         </div>
-                        <h7>Sen de onu elle</h7>
+                        <span>Sen de onu elle</span>
                     </div>
                 </div>
-                <div class="media media-reply pb-2">
-                    <img class="mr-3 circle-rounded" src="/images/avatar/1.jpg" width="50" height="50" alt="Generic placeholder image">
-                    <div class="media-body">
-                        <div class="d-sm-flex justify-content-between mb-2">
-                            <h5 class="mb-sm-0">Habililo <small class="text-muted ml-3">10 min ago</small></h5>
-                            <div class="media-reply__link d-flex justify-content-around">
-                                <div class="d-flex justify-content-center align-items-center mr-3">
-                                    <span>3</span>
-                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="like(index)"><i class="fa fa-thumbs-up"></i></button>
-                                </div>
-                                <div class="d-flex justify-content-between align-items-center mr-3">
-                                    <span>50</span>
-                                    <button class="btn btn-transparent p-0 ml-1" v-on:click="disLike(index)"><i class="fa fa-thumbs-down"></i></button>
-                                </div>
-                                <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
-                            </div>
-                        </div>
-                        <h7>Sen de onu elle</h7>
+            </div>
+        </div>
+        <div v-if="(question.id <= 0)&&isLoading" class="card">
+            <div class="d-flex justify-content-center align-items-center mt-5 mb-5">
+                <div class="">
+                    <div class="custom-question-spinner">
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="card" v-if="(question.id <= 0)&&(!isLoading)">
+            <div class="d-flex justify-content-center align-items-center mt-5 mb-5">
+                <div class="fw-bold fs-5">
+                    <span>
+                        Soru bulunamadı...
+                    </span>
                 </div>
             </div>
         </div>
